--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  padding-top: 25px;
+  overflow: hidden;
 }
 
 @media (prefers-color-scheme: light) {
